--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
-    "@arcgis/map-components": "^4.29.0-beta.91"
+    "@arcgis/map-components": "^4.31.0-next.54"
   }
 }
